--- a/src/main/resources/templates/superpower.html
+++ b/src/main/resources/templates/superpower.html
@@ -22,16 +22,16 @@
                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/HeroSighting/superpower/add/">Sightings</a>
+                    <a class="nav-link" href="/HeroSighting/sighting/display">Sightings</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/HeroSighting/superpower/add/">Organizations</a>
+                    <a class="nav-link" href="/HeroSighting/organization/display">Organizations</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/HeroSighting/superhero/display">Super Heroes</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/HeroSighting/superpower/update/">Locations</a>
+                    <a class="nav-link" href="/HeroSighting/location/display">Locations</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/HeroSighting/superpower/display">Super Powers</a>
@@ -47,11 +47,25 @@
 <div class="col-4">
 
 <h3>All Super Powers</h3>
-<ul >
-    <li  class = "power" th:value= "${power.id}" th:each = "power : ${allPowers}">
-        <h5 class="powerGroup" th:text= "${power.type}" ></h5><i class=" icon far fa-edit"></i><i class="icon fas fa-times-circle"></i>
-    </li>
-</ul>
+
+    <!--<div th:each="power :${allPowers}" class="power " th:value= "${power.id}" th:text= "${power.type}" href="#"></div><a href="#" th:href="@{/editsuperpower(id=${.id})}">Edit</a>-->
+
+    <!--<button th:each="delete :${deletes}" class="deleteIcon " href="#">Delete</button>-->
+
+        <table class="table">
+            <thead>
+                <tr></tr>
+            </thead>
+            <tbody>
+                <tr th:each="power : ${allPowers}" >
+                    <td th:value= "${power.id}" class="power" th:text="${power.type}"></td>
+                    <td> <a href="#" th:href="@{/HeroSighting/editsuperpower/update(id=${power.id})}">Edit</a></td>
+                    <td> <a href="#" th:href="@{/HeroSighting/superpower/delete(id=${power.id})}">Delete</a></td>
+                </tr>
+            </tbody>
+         </table>
+
+
 </div>
 <div class="col-8">
     <div class="col-8">
@@ -59,28 +73,28 @@
         <!--<p th:text = "${singlepower}"></p>-->
         <!-- Example single danger button -->
         <div >
-            <form>
+            <form method="post">
                 <h4 class="newPower">New Super Power</h4>
                 <div class="input-group">
 
-                    <input type="text" class="form-control" id="addPower" placeholder="Description">
+                    <input type="text" class="form-control" name="description" id="addPower" placeholder="Description">
                     <div class="input-group-append">
-                        <button class="btn btn-primary" type="button">Add</button>
+                        <button class="btn btn-primary" type="submit">Add</button>
                     </div>
                 </div>
             </form>
 
         </div>
         <!--<div class="btn-group col-3">-->
-            <!--&lt;!&ndash;<div class="dropdown">&ndash;&gt;-->
-                <!--&lt;!&ndash;<button type="button" class="btn btn-Secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">&ndash;&gt;-->
-                    <!--&lt;!&ndash;Choose a Power&ndash;&gt;-->
-                <!--&lt;!&ndash;</button>&ndash;&gt;-->
-                <!--&lt;!&ndash;<div class="dropdown-menu"   >&ndash;&gt;-->
+            <!--<div class="dropdown">-->
+                <!--<button type="button" class="btn btn-Secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">-->
+                    <!--Choose a Power-->
+                <!--</button>-->
+                <!--<div class="dropdown-menu"   >-->
 
-                            <!--&lt;!&ndash;<a th:each="power :${allPowers}" class="power dropdown-item" th:value= "${power.id}" th:text= "${power.type}" href="#"></a>&ndash;&gt;-->
-                <!--&lt;!&ndash;</div>&ndash;&gt;-->
-            <!--&lt;!&ndash;</div>&ndash;&gt;-->
+                            <!--<a th:each="power :${allPowers}" class="power dropdown-item" th:value= "${power.id}" th:text= "${power.type}" href="#"></a>-->
+                <!--</div>-->
+            <!--</div>-->
 
 
         <!--</div>-->
