--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,3 +1,60 @@
 li{
     list-style:none;
 }
+
+
+.newPower{
+    margin-top: 30px;
+    margin-bottom: 30px;
+
+}
+
+ #map {
+        height: 400px;  /* The height is 400 pixels */
+        width: 750px;  /* The width is the width of the web page */
+       }
+
+.deleteIcon{
+    margin:2px;
+    color:red;
+}
+.editIcon{
+    margin:2px;
+    color:green;
+}
+
+.radio{
+    margin-left:50px;
+    margin-bottom: 25px;
+    display:inline-block;
+
+}
+.checkbox{
+     margin:10px;
+    margin-bottom: 25px;
+    display:inline-block;
+}
+
+.bg-popUp{
+    width:100%;
+    height:100%;
+    background-color:rgba(0,0,0,0.7);
+    position:fixed;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    top:0;
+    left:0;
+}
+
+.popUp{
+    width: 750px;
+    height: 500px;
+    background-color:white;
+    border-radius:4px;
+    font-size: 1.2em;
+}
+
+.superPowerChoice{
+
+}
