--- a/src/main/resources/templates/editlocation.html
+++ b/src/main/resources/templates/editlocation.html
@@ -71,29 +71,29 @@
             <!-- Example single danger button -->
             <div >
                 <form method="post">
-                    <h4 >Add Location</h4>
+                    <h4 th:text="${location.name}"></h4>
 
                     <div class="form-group">
                         <label for="name">Name</label>
-                        <input type="text" class="form-control" id="name" name="name" placeholder="Enter location Name">
+                        <input type="text" class="form-control" id="name" name="name" th:value = "${location.name}">
 
                     </div>
                     <div class="form-group">
-                        <label for="description">Description</label>
-                        <input type="text" class="form-control" id="description" name="description"  placeholder="Location description">
+                        <label for="description">Edit Description</label>
+                        <input type="text" class="form-control" id="description" name="description"  th:value = "${location.description}">
                     </div>
                     <div class="form-group">
-                        <label for="description">Address</label>
+                        <label for="description">Edit Address</label>
 
-                        <input type="text"  class="form-control" id="address" name="address"  placeholder="Enter Address">
+                        <input type="text"  class="form-control" id="address" name="address"  th:value = "${location.address}">
                     </div>
                     <div class="form-group">
-                        <label for="latitude">Latitude</label>
-                        <input id="latitude" type="text" class="form-control" name="latitude" placeholder="Enter Latitude"/>
+                        <label for="latitude">Edit Latitude</label>
+                        <input id="latitude" type="text" class="form-control" name="latitude" th:value="${location.latitude}"/>
                     </div>
                     <div class="form-group">
-                        <label for="longitude">Longitude</label>
-                        <input id="longitude" type="text" class="form-control" name="longitude" placeholder="Enter Longitude"/>
+                        <label for="longitude">Edit Longitude</label>
+                        <input id="longitude" type="text" class="form-control" name="longitude" th:value="${location.longitude}"/>
                     </div>
 
                     <div class="form-group row">
@@ -102,9 +102,11 @@
                         <div class="col-9" id="map">
 
                         </div>
+                        <input type="hidden" name="id" th:value="${location.id}"/>
 
 
-                        <button type="submit" class="btn btn-primary">Add location</button>
+
+                        <button type="submit" class="btn btn-primary">Update location</button>
                     </div>
 
                     <!--<div id="popUp" style="display:none">-->
