--- a/src/main/resources/templates/editorganization.html
+++ b/src/main/resources/templates/editorganization.html
@@ -46,7 +46,7 @@
 <div class="container-full-width row">
     <div class="col-4">
 
-        <h3>All Locations</h3>
+        <h3>All Organizations</h3>
         <table class="table">
             <thead>
             <tr>
@@ -54,11 +54,11 @@
             </tr>
             </thead>
             <tbody>
-            <tr th:each="location : ${locations}">
+            <tr th:each="organization : ${organizations}">
 
-                <td th:value= "${location.id}" class="team" th:text="${location.name}"></td>
-                <td> <a href="#" th:href="@{/HeroSighting/editlocation/update(id=${location.id})} " class="editIcon">Edit</a></td>
-                <td> <a href="#" th:href="@{/HeroSighting/location/delete(id=${location.id})}" class="deleteIcon">Delete</a></td>
+                <td th:value= "${organization.id}" class="team" th:text="${organization.name}"></td>
+                <td> <a href="#" th:href="@{/HeroSighting/editorganization/update(id=${organization.id})} " class="editIcon">Edit</a></td>
+                <td> <a href="#" th:href="@{/HeroSighting/organization/delete(id=${organization.id})}" class="deleteIcon">Delete</a></td>
             </tr>
             </tbody>
         </table>
@@ -71,40 +71,45 @@
             <!-- Example single danger button -->
             <div >
                 <form method="post">
-                    <h4 >Add Location</h4>
+                    <h4 class="newOrganization">Edit Organzation</h4>
 
                     <div class="form-group">
-                        <label for="name">Name</label>
-                        <input type="text" class="form-control" id="name" name="name" placeholder="Enter location Name">
+                        <label for="name">Edit Name</label>
+                        <input type="text" class="form-control" id="name" name="name" th:value = "${organization.name}">
 
                     </div>
                     <div class="form-group">
-                        <label for="description">Description</label>
-                        <input type="text" class="form-control" id="description" name="description"  placeholder="Location description">
+                        <label for="description">Edit Description</label>
+                        <input type="text" class="form-control" id="description" name="description"  th:value ="${organization.description}">
                     </div>
-                    <div class="form-group">
-                        <label for="description">Address</label>
-
-                        <input type="text"  class="form-control" id="address" name="address"  placeholder="Enter Address">
-                    </div>
-                    <div class="form-group">
-                        <label for="latitude">Latitude</label>
-                        <input id="latitude" type="text" class="form-control" name="latitude" placeholder="Enter Latitude"/>
-                    </div>
-                    <div class="form-group">
-                        <label for="longitude">Longitude</label>
-                        <input id="longitude" type="text" class="form-control" name="longitude" placeholder="Enter Longitude"/>
-                    </div>
-
                     <div class="form-group row">
-                        <label for="map" class="col-3 col-form-label">
-                            Headquarters</label>
-                        <div class="col-9" id="map">
-
+                        <label for="location" class="col-3 col-form-label">
+                            Edit Headquarters</label>
+                        <div class="col-9">
+                            <select id="location" name="location"
+                                    class="form-control" >
+                                <option th:each="location : ${locations}"
+                                        th:value="${location.id}"
+                                        th:text="${location.name}"
+                                        th:selected="${organization.location.id == location.id}">
+                                    location</option>
+                            </select>
                         </div>
-
-
-                        <button type="submit" class="btn btn-primary">Add location</button>
+                        <label for="members" class="col-3 col-form-label">
+                            Super Heroes</label>
+                        <div class="col-9">
+                            <select multiple id="members" name="member"
+                                    class="form-control" >
+                                <option th:each="member : ${members}"
+                                        th:value="${member.id}"
+                                        th:text="${member.name}"
+                                        th:selected="${organization.members.contains(member)}"
+                                >
+                                    Edit Super Heroes</option>
+                            </select>
+                        </div>
+                        <input type="hidden" name="id" th:value = "${organization.id}">
+                        <button type="submit" class="btn btn-primary">Update Organization</button>
                     </div>
 
                     <!--<div id="popUp" style="display:none">-->
@@ -129,9 +134,7 @@
 
 
 </div>
-<script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAnc30-BQJboig9uJgABBjg3AwoNgO6Rb0-tb54pSeK0&callback=initMap">
-</script>
+
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"  crossorigin="anonymous"></script>
