--- a/src/main/resources/templates/editsuperpower.html
+++ b/src/main/resources/templates/editsuperpower.html
@@ -11,7 +11,7 @@
     <link th:href="@{/css/main.css}" href="../static/css/main.css"
           rel="stylesheet" type="text/css" media="screen"/>
 
-    <title>Super Powers</title>
+    <title>Super Power Edit</title>
 </head>
 <body>
 <h1 id="superPowerHeader" class="jumbotron text-light bg-dark text-center">Super Powers</h1>
@@ -22,16 +22,16 @@
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/HeroSighting/superpower/add/">Sightings</a>
+            <a class="nav-link" href="/HeroSighting/sighting/display/">Sightings</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/HeroSighting/superpower/add/">Organizations</a>
+            <a class="nav-link" href="/HeroSighting/organization/display/">Organizations</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/HeroSighting/superpower/display">Super Heroes</a>
+            <a class="nav-link" href="/HeroSighting/superhero/display">Super Heroes</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/HeroSighting/superpower/update/">Locations</a>
+            <a class="nav-link" href="/HeroSighting/location/display/">Locations</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/HeroSighting/superpower/display">Super Powers</a>
@@ -47,11 +47,21 @@
     <div class="col-4">
 
         <h3>All Super Powers</h3>
-        <ul >
-            <li  class = "power" th:value= "${power.id}" th:each = "power : ${allPowers}">
-                <h5 class="powerGroup" th:text= "${power.type}" ></h5><i class=" editIcon far fa-edit"></i><i class="deleteIcon fas fa-times-circle"></i>
-            </li>
-        </ul>
+        <table class="table">
+            <thead>
+            <tr>
+
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="power : ${allPowers}" >
+
+                <td th:value= "${power.id}" class="power" th:text="${power.type}"></td>
+                <td> <a href="#" th:href="@{/HeroSighting/editsuperhero/update(id=${hero.id})}" class="editIcon">Edit</a></td>
+                <td> <a href="#" th:href="@{/HeroSighting/superhero/delete(id=${hero.id})}" class="deleteIcon">Delete</a></td>
+            </tr>
+            </tbody>
+        </table>
     </div>
     <div class="col-8">
         <div class="col-8">
@@ -59,13 +69,14 @@
             <!--<p th:text = "${singlepower}"></p>-->
             <!-- Example single danger button -->
             <div >
-                <form>
-                    <h4 class="newPower">New Super Power</h4>
+                <form method="post">
+                    <h4 class="newPower">Edit Super Power</h4>
                     <div class="input-group">
 
-                        <input type="text" class="form-control" id="addPower" placeholder="Description">
+                        <input type="text" class="form-control" id="addPower" name="type" th:value="${power.type}"/>
+                        <input type="hidden" name="id" th:value="${power.id}"/>
                         <div class="input-group-append">
-                            <button class="btn btn-primary" type="button">Add</button>
+                            <button class="btn btn-primary" type="submit">Update</button>
                         </div>
                     </div>
                 </form>
