--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,26 +1,153 @@
 li{
     list-style:none;
 }
+html{
+    cursor:pointer;
+}
+ .background-image{
+       width:100%
+       position:fixed;
+       height:100%;
+       background-image:url(../img/superherofixed.jpg);
+       background-position:center;
+       color:#FFF;
+       background-repeat: no-repeat;
+       background-attachment: fixed;
+       background-size:cover;
+       transition: background-image 0.5s;
+}
+.navigation{
+    margin: 0 auto;
+}
+.page-title{
+    margin-left:20%;
+    margin-bottom:6%;
+}
+.form-background{
+    padding-top:15px;
+    margin-left: 20%;
+    width: 700px;
+    margin: auto;
+    background: rgb(195, 29, 16);
+    border:4px;
+    color:#fff;
+    border-top-left-radius: 10% 50%;
+    border-bottom-left-radius: 10% 50%;
 
+}
+::placeholder {
+    color: white;
+    opacity: 1;
 
+               }
+.input-style{
+    color:#fff;
+    margin-left:20%;
+    background: rgb(195, 29, 16);
+    padding: 10px;
+    width:400px;
+    border-bottom: #FFF;
+    border-bottom-width: 3px;
+    border-bottom-style: solid;
+    border-top-style:none;
+    border-left-style:none;
+    border-right-style:none;
+}
+.body-container{
+    margin:auto;
+    width:75%;
+    background:gray;
+    background:#FFF;
+}
 .newPower{
     margin-top: 30px;
     margin-bottom: 30px;
 
 }
 
- #map {
-        height: 400px;  /* The height is 400 pixels */
-        width: 750px;  /* The width is the width of the web page */
-       }
+a:link,a:visited{
+    text-decoration:none;
+    color:white;
+}
+.power, .editing {
+  padding: 5px;
+  text-align: center;
+  background-color: #1849CA;
+   margin:10px;
+   color: #FFF;
 
+}
+.editing {
+
+  padding:5px;
+  display: none;
+  margin-bottom: 5px;
+}
+
+#homeBody{
+    height:100%;
+    background-image:url(../img/SuperHero3.jpg);
+    background-position:center;
+    color:#FFF;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size:cover;
+    transition: background-image 0.5s;
+
+}
+
+.color-overlay{
+    width:100%;
+    height:100%;
+    /*
+    background: #1849CA;
+    */
+    background:rgba(0,0,0,0.9);
+    opacity:0.7;
+    position:absolute;
+    top:0;
+    left:0;
+}
+
+.list-of-sightings {
+    margin-top: 30px;
+   }
+.sighting-ticker{
+    display:block;
+    background:  rgba(195, 29, 16,0.9);
+    border-radius: 5px;
+    border: 3px solid RGB: (195, 29, 16);
+    text-align:center;
+    padding-top:2px;
+    padding-bottom:2px;
+
+
+}
+.recent-sighting-header{
+    margin: auto;
+      width: 50%;
+}
+.sighting{
+    margin:5px;
+}
+.headingTitle{
+    letter-spacing:2px;
+    font-size:3em;
+    padding: .75em 1em;
+}
+/**
+ #map {
+        height: 400px;  /* The height is 400 pixels
+        width: 750px;  /* The width is the width of the web page
+       }
+*/
 .deleteIcon{
     margin:2px;
-    color:red;
+    background-color:red;
 }
 .editIcon{
     margin:2px;
-    color:green;
+    background-color:green;
 }
 
 .radio{
@@ -29,32 +156,16 @@ li{
     display:inline-block;
 
 }
+
+
 .checkbox{
      margin:10px;
     margin-bottom: 25px;
     display:inline-block;
 }
 
-.bg-popUp{
-    width:100%;
-    height:100%;
-    background-color:rgba(0,0,0,0.7);
-    position:fixed;
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    top:0;
-    left:0;
-}
 
-.popUp{
-    width: 750px;
-    height: 500px;
-    background-color:white;
-    border-radius:4px;
-    font-size: 1.2em;
-}
 
-.superPowerChoice{
 
-}
+
+
