--- a/src/main/resources/templates/editsuperhero.html
+++ b/src/main/resources/templates/editsuperhero.html
@@ -13,13 +13,13 @@
 
     <title>Super Heroes</title>
 </head>
-<body>
+<body class="background-image">
 <h1 id="superPowerHeader" class="jumbotron text-light bg-dark text-center">Super Powers</h1>
 <header>
 
     <ul class="navbar navbar-expand-lg navbar-dark bg-dark nav-fill nav-pills">
         <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/HeroSighting/home">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/HeroSighting/sighting/display">Sightings</a>
