--- a/src/main/resources/templates/location.html
+++ b/src/main/resources/templates/location.html
@@ -13,13 +13,14 @@
 
     <title>Hero Sightings</title>
 </head>
-<body>
+<body class="background-image">
+<div class="body-container">
 <h1 id="superPowerHeader" class="jumbotron text-light bg-dark text-center">Organizations</h1>
 <header>
 
     <ul class="navbar navbar-expand-lg navbar-dark bg-dark nav-fill nav-pills">
         <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/HeroSighting/home">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/HeroSighting/sighting/display">Sightings</a>
@@ -40,8 +41,8 @@
     </ul>
 
 
-    </div>
-    </nav>
+
+
 </header>
 <div class="container-full-width row">
     <div class="col-4">
@@ -70,41 +71,42 @@
             <!--<p th:text = "${singlepower}"></p>-->
             <!-- Example single danger button -->
             <div >
-                <form method="post">
-                    <h4 >Add Location</h4>
+                <form class="form-background" method="post">
+                    <h4 class="page-title">Add Location</h4>
 
                     <div class="form-group">
-                        <label for="name">Name</label>
-                        <input type="text" class="form-control" id="name" name="name" placeholder="Enter location Name">
+
+                        <input type="text" class="input-style" id="name" name="name" placeholder="Enter location Name">
 
                     </div>
                     <div class="form-group">
-                        <label for="description">Description</label>
-                        <input type="text" class="form-control" id="description" name="description"  placeholder="Location description">
-                    </div>
-                    <div class="form-group">
-                        <label for="description">Address</label>
 
-                        <input type="text"  class="form-control" id="address" name="address"  placeholder="Enter Address">
+                        <input type="text" class="input-style" id="description" name="description"  placeholder="Location description">
                     </div>
                     <div class="form-group">
-                        <label for="latitude">Latitude</label>
-                        <input id="latitude" type="text" class="form-control" name="latitude" placeholder="Enter Latitude"/>
+
+
+                        <input type="text"  class="input-style" id="address" name="address"  placeholder="Enter Address">
                     </div>
                     <div class="form-group">
-                        <label for="longitude">Longitude</label>
-                        <input id="longitude" type="text" class="form-control" name="longitude" placeholder="Enter Longitude"/>
+
+                        <input id="latitude" type="text" class="input-style" name="latitude" placeholder="Enter Latitude"/>
+                    </div>
+                    <div class="form-group">
+
+                        <input id="longitude" type="text" class="input-style" name="longitude" placeholder="Enter Longitude"/>
                     </div>
 
-                    <div class="form-group row">
+                    <div>
                         <label for="map" class="col-3 col-form-label">
                             Headquarters</label>
                         <div class="col-9" id="map">
 
                         </div>
+                        <div>
+                            <button type="submit" class="btn btn-primary">Add location</button>
 
-
-                        <button type="submit" class="btn btn-primary">Add location</button>
+                        </div>
                     </div>
 
                     <!--<div id="popUp" style="display:none">-->
@@ -128,6 +130,7 @@
 </div>
 
 
+</div>
 </div>
 <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAnc30-BQJboig9uJgABBjg3AwoNgO6Rb0-tb54pSeK0&callback=initMap">
