--- a/src/main/resources/templates/organization.html
+++ b/src/main/resources/templates/organization.html
@@ -13,13 +13,13 @@
 
     <title>Hero Sightings</title>
 </head>
-<body>
+<body class="background-image">
 <h1 id="superPowerHeader" class="jumbotron text-light bg-dark text-center">Organizations</h1>
 <header>
 
     <ul class="navbar navbar-expand-lg navbar-dark bg-dark nav-fill nav-pills">
         <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/HeroSighting/home">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/HeroSighting/sighting/display">Sightings</a>
@@ -104,6 +104,7 @@
                                    </option>
                             </select>
                         </div>
+                        <div class="form-group row">
                         <label for="members" class="col-3 col-form-label">
                             Super Heroes</label>
                         <div class="col-9">
@@ -116,10 +117,10 @@
                                     Super Heroes</option>
                             </select>
                         </div>
+                        </div>
 
-                        <button type="submit" class="btn btn-primary">Add Organization</button>
                     </div>
-
+                    <button type="submit" class="btn btn-primary">Add Organization</button>
                     <!--<div id="popUp" style="display:none">-->
                     <!--<input type="checkbox" th:each="power :${allPowers}" class="power" th:value= "${power.id}" th:text= "${power.type}" href="#">-->
                     <!--</div>-->
