--- a/src/main/resources/templates/superhero.html
+++ b/src/main/resources/templates/superhero.html
@@ -13,12 +13,12 @@
 
     <title>Super Heroes</title>
 </head>
-<body>
+<body class="background-image">
 <h1 id="superPowerHeader" class="jumbotron text-light bg-dark text-center">Super Powers</h1>
 <header>
     <ul class="navbar navbar-expand-lg navbar-dark bg-dark nav-fill nav-pills">
         <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/HeroSighting/home">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/HeroSighting/sighting/display">Sightings</a>
@@ -153,5 +153,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"  crossorigin="anonymous"></script>
 <script type="text/javascript" th:src="@{/src/hero.js}"></script>
+
 </body>
 </html>
