--- a/src/main/resources/templates/superpower.html
+++ b/src/main/resources/templates/superpower.html
@@ -1,5 +1,4 @@
-
-<html xmlns:th="http//www.thymeleaf.org" xmlns ="http://www.w3.org/1999/xhtml">
+<html xmlns:th="http//www.thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml" xmlns:v-on="http://www.w3.org/1999/xhtml">
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -13,13 +12,13 @@
 
     <title>Super Powers</title>
 </head>
-<body>
+<body class="background-image">
 <h1 id="superPowerHeader" class="jumbotron text-light bg-dark text-center">Super Powers</h1>
 <header>
 
             <ul class="navbar navbar-expand-lg navbar-dark bg-dark nav-fill nav-pills">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/HeroSighting/home">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/HeroSighting/sighting/display">Sightings</a>
@@ -47,23 +46,44 @@
 <div class="col-4">
 
 <h3>All Super Powers</h3>
+    <!--<div id="demo1">-->
+        <!--<button v-on:click="show = !show">-->
+            <!--Toggle-->
+        <!--</button>-->
+        <!--<transition name="fade">-->
+            <!--<p >hello</p>-->
+        <!--</transition>-->
+    <!--</div>-->
+    <!--<td><a href="#" th:href="@{/HeroSighting/editsuperpower/update(id=${power.id})}"  class="editIcon "><transition name = "fade"><p v-if="show">Edit</p></transition></a></td>-->
 
     <!--<div th:each="power :${allPowers}" class="power " th:value= "${power.id}" th:text= "${power.type}" href="#"></div><a href="#" th:href="@{/editsuperpower(id=${.id})}">Edit</a>-->
 
     <!--<button th:each="delete :${deletes}" class="deleteIcon " href="#">Delete</button>-->
 
-        <table class="table">
-            <thead>
-                <tr></tr>
-            </thead>
-            <tbody>
-                <tr th:each="power : ${allPowers}" >
-                    <td th:value= "${power.id}" class="power" th:text="${power.type}"></td>
-                    <td> <a href="#" th:href="@{/HeroSighting/editsuperpower/update(id=${power.id})}">Edit</a></td>
-                    <td> <a href="#" th:href="@{/HeroSighting/superpower/delete(id=${power.id})}">Delete</a></td>
-                </tr>
-            </tbody>
-         </table>
+        <!--<table class="table">-->
+            <!--<thead>-->
+                <!--<tr></tr>-->
+            <!--</thead>-->
+            <!--<tbody>-->
+                <!--<tr th:each="power : ${allPowers}" >-->
+                    <!--<td th:value= "${power.id}" class="power" th:text="${power.type}"></td>-->
+                    <!--<td> <a href="#" th:href="@{/HeroSighting/editsuperpower/update(id=${power.id})}" class="editIcon">Edit</a></td>-->
+                    <!--<td> <a href="#" th:href="@{/HeroSighting/superpower/delete(id=${power.id})}" class="deleteIcon">Delete</a></td>-->
+                <!--</tr>-->
+            <!--</tbody>-->
+         <!--</table>-->
+
+            <div th:each="power : ${allPowers}">
+                <div d-flex justify-content-center col-6>
+                    <h5 th:value= "${power.id}" class="power edit" th:text="${power.type}"></h5>
+                </div>
+                <div>
+                    <button class="col-5 btn-success editIcon editing"><a href="#" th:href="@{/HeroSighting/editsuperpower/update(id=${power.id})}" >Edit</a></button>
+                    <button class="col-5 btn-danger deleteIcon editing"><a href="#" th:href="@{/HeroSighting/superpower/delete(id=${power.id})}" >Delete</a></button>
+
+                </div>
+
+            </div>
 
 
 </div>
@@ -115,6 +135,16 @@
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"  crossorigin="anonymous"></script>
+
 <script type="text/javascript" th:src="@{/src/hero.js}"></script>
+<script src = "https://unpkg.com/vue@2.6.10/dist/vue.js"></script>
+<script>
+  <!--new Vue({-->
+    <!--el: '.demo',-->
+    <!--data:{-->
+        <!--show: true-->
+    <!--}-->
+<!--});-->
+</script>
 </body>
 </html>
