updated form layouts for display pages

--- a/src/main/resources/templates/HeroSighting.html
+++ b/src/main/resources/templates/HeroSighting.html
@@ -14,8 +14,9 @@
     <title>Hero Sightings</title>
 </head>
 <body  >
+
+<div class="color-overlay"></div>
 <div class="container-full-width row" id="homeBody">
-    <div class="color-overlay"></div>
 
     <div class="headings col-5">
         <ul>
@@ -51,6 +52,8 @@
             </li>
         </ul>
     </div>
+
+</div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
