--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,3 +1,9 @@
+
+
+body{
+    min-height:100%;
+    font-family: 'Ubuntu', sans-serif;
+}
 li{
     list-style:none;
 }
@@ -26,14 +32,31 @@ html{
 .form-background{
     padding-top:15px;
     margin-left: 20%;
-    width: 700px;
+    width: 96%;
     margin: auto;
     background: rgb(195, 29, 16);
     border:4px;
     color:#fff;
     border-top-left-radius: 10% 50%;
     border-bottom-left-radius: 10% 50%;
+    padding-bottom:50px;
+    box-shadow: 10px 10px 5px grey;
 
+}
+
+.location-button{
+    margin-top: 0.5em;
+    margin-right: 0.75em;
+    border solid 3px #FFF;
+    padding 0.5em;
+    color:rgb(195, 29, 16);
+    background:#FFF;
+    border-top-left-radius: 10% 50%;
+    border-bottom-left-radius: 10% 50%;
+    border-top-right-radius: 10% 50%;
+    border-bottom-right-radius: 10% 50%;
+    float:right;
+    box-shadow: 5px 5px 5px rgb(139,0,0);
 }
 ::placeholder {
     color: white;
@@ -45,7 +68,7 @@ html{
     margin-left:20%;
     background: rgb(195, 29, 16);
     padding: 10px;
-    width:400px;
+    width:70%;
     border-bottom: #FFF;
     border-bottom-width: 3px;
     border-bottom-style: solid;
@@ -53,11 +76,19 @@ html{
     border-left-style:none;
     border-right-style:none;
 }
+input:focus {
+  outline: none;
+}
+
+.location-header{
+    margin-left:2em;
+    color:rgb(195, 29, 16);
+}
 .body-container{
     margin:auto;
     width:75%;
-    background:gray;
-    background:#FFF;
+    border-radius:5px;
+    background: rgb(220,245,245)
 }
 .newPower{
     margin-top: 30px;
@@ -70,11 +101,23 @@ a:link,a:visited{
     color:white;
 }
 .power, .editing {
-  padding: 5px;
-  text-align: center;
-  background-color: #1849CA;
-   margin:10px;
-   color: #FFF;
+    border-radius: 16px;
+    padding: 5px;
+    text-align: center;
+    background-color: #1849CA;
+    margin:10px;
+    color: #FFF;
+    box-shadow: 5px 5px 5px grey;
+
+}
+.navigation{
+    width:100%;
+    margin:0 auto;
+}
+.navigation-tabs{
+
+
+    background: rgba(255,255,255,0.5);
 
 }
 .editing {
@@ -107,6 +150,17 @@ a:link,a:visited{
     position:absolute;
     top:0;
     left:0;
+}
+.color-overlay-pages{
+
+    width:100%;
+    min-height:100%;
+    background:rgba(0,0,0,0.9);
+    opacity:0.7;
+    position:fixed;
+    top:0;
+    left:0;
+    z-index:-10;
 }
 
 .list-of-sightings {
